<resources>
    <string name="app_name">Footpath</string>
    <string name="title_activity_map">Map</string>
    <string name="title_activity_hike_list">HikeListActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="back_to_map">"Back to map</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <!-- Sign-in status messages -->
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="signing_in">Signing in…</string>
    <string name="signed_out">Signed out</string>
    <string name="signed_in_err">"Error: please check logs."</string>
    <string name="error_null_person">
        Error: Plus.PeopleApi.getCurrentPerson returned null. Ensure that the Google+ API is
        enabled for your project, you have a properly configured google-services.json file
        and that your device has an internet connection.
    </string>

    <!-- Google Play Services error for Toast -->
    <string name="play_services_error_fmt">Google Play Services Error: %i</string>

    <!-- Strings related to hike display -->
    <string name="hikeNumberText">Hike #%1$d</string>
    <string name="hikeOwnerText">Owner: %1$s</string>
    <string name="hikeDistanceText">Distance: %1$d km</string>
    <string name="hikeRatingText">Rating: %1$d</string>
    <string name="hikeTimeText">Time: %1$d</string>
    <string name="defaultNotificationTitle">Tracking a hike</string>
    <string name="defaultNotificationContent">Click here to check on your progress</string>
    <string name="timeElapsedInfo">\t%d s</string>
    <string name="distanceToStart">\t%f m travelled</string>

    <!-- Button labels -->
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>
    <string name="change_name">Choose A New Nickname</string>
    <string name="goto_map">Go To Map</string>
    <string name="button_done">Done</string>
    <string name="button_start_tracking">Start</string>
    <string name="button_stop_tracking">Stop</string>
    <string name="button_pause_tracking">Pause</string>
    <string name="button_resume_tracking">Resume</string>>
    <string name="button_export_hike">Export Hike as GPX</string>


    <string name="button_create_annotation">Add Annotation</string>>
    <string name="button_add_picture">Add Picture</string>>
    <!-- Content Description for images -->
    <string name="desc_google_icon">Google Logo</string>

    <!-- Rationale for asking for Contacts -->
    <string name="contacts_permission_rationale">Contacts access is needed in order to retrieve your email address.</string>
    <string name="title_activity_change_nickname">ChangeNicknameActivity</string>

    <string name="edit_nickname">Change nickname</string>
    <string name="title_activity_hike_info">HikeInfoActivity</string>
    <string name="title_activity_user_data">UserDataActivity</string>

    <string name="num_hikes_fmt">Number of hikes: %d</string>
    <string name="nickname_fmt">Nickname: %s</string>

    <!-- IDs -->
    <item name="button_tracking_toggle" type="id" />
    <item name="button_tracking_pause" type="id" />
    <item name="feedback_notification" type="id" />
    <item name="mapTextTable" type="id" />
    <item name="button_save_hike" type="id" />
    <item name="button_annotation_create" type="id" />
    <item name="button_picture" type="id" />
    <item name="annotation_text" type="id" />

    <!-- Save hike prompt -->
    <string name="button_save_hike">Save</string>
    <string name="button_cancel_save">Discard</string>
    <string name="prompt_title">Hike finished!</string>
    <string name="prompt_title_hint">Hike name</string>
    <string name="prompt_comment_hint">Drop a comment about this hike</string>


    <!-- Add annotation prompt -->
    <string name="add_annotation">Add annotation</string>
    <string name="prompt_add_tile">Annotation</string>
    <string name="add_picture"> Take a picture</string>
    <string name="prompt_annotation_hint">Drop an annotation of the current point </string>

    <!-- Cancel hike prompt -->
    <string name="button_proceed_cancel">Discard</string>
    <string name="button_keep_tracking">Keep Tracking</string>
    <string name="warning_title">Warning</string>
    <string name="warning_description">If you do this you will lose your hike forever. Do you wish to proceed?</string>


    <!-- Error messages -->
    <string name="gps_service_connection_dropped">Connection to gps service was dropped</string>
    <string name="gps_service_access_failure">Could not access gps service</string>
    <string name="gps_location_updates_failure">Could not request location updates</string>
    <string name="sign_in_error_connecting_to_server">Error while connecting to the server</string>
    <string name="gps_location_not_enabled">Please enable your GPS connection</string>

    <string name="back">BACK</string>
    <string name="go_hikes">Hikes</string>
    <string name="logout">Are you sure you want to logout?</string>
    <string name="new_profile">Choose a new profile picture</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>


    <string name="hike_name">Hike Name</string>
    <string name="distance">Distance</string>
    <string name="sample_distance">10 km</string>
    <string name="elevation">Elevation</string>
    <string name="sample_elavation">Max: 2000m Min: 1000m</string>
    <string name="rating">Rating</string>
    <string name="selete_pic">Select Picture</string>
    <string name="Add" />

    <string name="comments">Comments</string>
    <string name="button_comment">Comment</string>
    <string name="make_comment">What do you think about the hike?</string>
    <string name="type_comment">Type in your comment!</string>
    <string name="test_comment">Awesome hike!</string>

    <string name="search_no_results">No results</string>
    <string name="search_error">An error occurred</string>
    <string name="user_hikes">Hikes:</string>
    <string name="change">Change</string>
    <string name="valid_user_name">Please enter a valid user name</string>
    <string name="owner">Owner</string>
    <string name="sample_owner">John Doe</string>

    <string name="export_error">Failed to export hike</string>
    <string name="export_success">Export successful!</string>

    <!-- Static TextView Strings -->
    <string name="loading_string">Loading...</string>

    <!-- Elevation -->
    <string name="elevation_min_max">Min: %1$s m Max: %2$s m</string>
    <string name="user_not_found">User Not Found</string>

</resources>
