<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/user_data_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="ch.epfl.sweng.team7.hikingapp.UserDataActivity">

    <Button
        android:layout_width="55dp"
        android:layout_height="50dp"
        android:text="@string/back"
        android:id="@+id/back_button"
        android:layout_marginLeft="20dp"
        android:textSize="12sp"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/profile_pic"
            android:src="@drawable/login_background"
            android:clickable="false"
            android:adjustViewBounds="true"
            android:layout_marginLeft="20dp"
            android:scaleType="fitXY"
            android:maxHeight="100dp"
            android:maxWidth="100dp"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/name_email">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="User Name"
                android:id="@+id/user_name"
                android:layout_marginLeft="20dp"
                android:textSize="30sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="User Email"
                android:id="@+id/user_email"
                android:layout_marginLeft="20dp"
                android:textSize="20sp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="4">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="Nickname"
            android:id="@+id/nickname"
            android:layout_marginLeft="20dp"
            android:textSize="25sp"
            android:layout_weight="3"/>

        <Button
            android:id="@+id/change_nickname"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/edit_nickname"
            android:layout_weight="1"
            android:layout_marginRight="20dp"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="# of hikes"
        android:id="@+id/num_hikes"
        android:layout_marginLeft="20dp"
        android:textSize="25sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_hikes"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:textSize="25sp" />

    <LinearLayout
        android:id="@+id/user_hike_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    </LinearLayout>

</LinearLayout>
